kubernetes/actual-budget/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: actual-budget
  labels:
    app: actual-budget
spec:
  replicas: 1
  selector:
    matchLabels:
      app: actual-budget
  template:
    metadata:
      labels:
        app: actual-budget
    spec:
      enableServiceLinks: true
      securityContext:
      containers:
      - name: actual-budget
        image: docker.io/actualbudget/actual-server:latest
        ports:
        - containerPort: 5006
          name: http
        securityContext:
          privileged: false
        volumeMounts:
        - name: actual-budget-data
          mountPath: /data
      volumes:
      - name: actual-budget-data
        persistentVolumeClaim:
          claimName: actual-budget-data-pvc
